<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardk_api</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gnoel949@gmail.com">gio</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>ardk_lifecycle</depend>
  <depend>nav2_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
